# brain

./: .flake8  .gitignore  Procfile  README.md  README.rst  build.bat  mypy.ini  pyproject.toml
brain/: __init__.py  __main__.py  consensus.py  constants.py  envgen.py  hostmodule.py  interfaces.py  jacks.py  leader_election.py  listen.py  main.py  module.py  parsers.py  patch.py  polyosc.py  protocol.py  servers.py  shared_proto.py  ssdp.py  sweep.py
brain/proto/: patching_pb2.py
doc/: api_reference.rst  conf.py  data_format.rst  index.rst
examples/: asr_envelope.py  audio_interface.py  common.py  envgen.py  filter.py  filter_core.pyx  manager.py  midi_to_cv.py  mixer.py  oscillator.py  oscilloscope.py  reverb.py  setup.py
proto/: patching.proto
tests/: test_brain.py  test_interface_patching.py  test_leader_election.py  test_parser.py
wip/: checksum_raw.py  consensus.py  filter_interpolation.py  igmp_query.py  patch.py  patch_enable.py  raw_socket.py  socket_test_client.py  socket_test_server.py  ssdp.py  sweep.py  waveform_calc.py
