[tool.poetry]
name = "brain"
version = "0.1.0"
description = ""
authors = ["Daniel Gruss <dsgruss@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.9.7"
mido = "^1.2.10"
python-rtmidi = "^1.4.9"
sounddevice = "^0.4.2"
numpy = "^1.21.2"
pyreadline = "^2.1"
netifaces = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.26.0"
black = "^21.7b0"
matplotlib = "^3.5.2"
honcho = "^1.1.0"
flake8 = "^4.0.1"
scipy = "^1.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
