[tool.poetry]
name = "brain"
version = "0.1.0"
description = ""
authors = ["Daniel Gruss <dsgruss@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9.7"
mido = "^1.2.10"
python-rtmidi = "^1.4.9"
sounddevice = "^0.4.2"
numpy = "^1.21.2"
pyreadline = "^2.1"
netifaces = "^0.11.0"
dataclasses-json = "^0.5.7"

[tool.poetry.dev-dependencies]
ipython = "^7.26.0"
black = "^21.7b0"
matplotlib = "^3.5.2"
honcho = "^1.1.0"
flake8 = "^4.0.1"
scipy = "^1.8.1"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"
mypy = "^0.960"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
Cython = "^0.29.30"
pedalboard = "^0.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
